# multimodal-recsys-lakehouse

./: .gitignore  main.py  pyproject.toml
data_pipeline/: .gitignore  README.md  pyproject.toml
data_pipeline/dbt/: README.md
data_pipeline/dbt/sales_forecasting/: README.md  dbt_project.yml  package-lock.yml  packages.yml
data_pipeline/dbt/sales_forecasting/analysis/: add_fk_constraints.sql  check_null_counts.sql
data_pipeline/dbt/sales_forecasting/macros/: calculate_ewma.sql  clean_weather_col.sql  dim_dates.sql  generate_schema_name.sql  rolling_agg.sql
data_pipeline/dbt/sales_forecasting/models/marts/sales/: dim_date.sql  dim_item.sql  dim_store.sql  fact_sales_item_daily.sql  sales.yml
data_pipeline/dbt/sales_forecasting/models/marts/weather/: dim_weather_profile.sql  fact_store_weather_daily.sql  weather.yml
data_pipeline/dbt/sales_forecasting/models/staging/: sources.yml  stg_key.sql  stg_sales.sql  stg_weather.sql
data_pipeline/infra/: README.md
data_pipeline/infra/postgres/: docker-compose.yml
data_pipeline/infra/postgres/scripts/: init_sales_forecasting.py
data_platform/: README.md
data_platform/dbt/: README.md  pyproject.toml
data_platform/dbt/recsys_transform/: .user.yml  (+3 more)
data_platform/infra/: README.md
data_platform/spark/: README.md
notebooks/: MM_ShortVideo_Rec.ipynb  seqneumf_colab.md
scripts/: check_videos.py  convert_visual_embeddings_to_parquet.py  push_to_kaggle.py  scratch_subsample.py  upload_raw_to_minio.py
src/: app.py  config.py  data_utils.py  train.py  trino_service.py  verify_trino_data.py
src/data/: loader.py
(+72 files in other folders)
