[project]
name = "data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "minio>=7.2.20",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
